--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>OneBU</title>
+		<link rel="icon" type="image/png" href="images/logosm.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
