--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
 									<header class="major">
 										<h2>Our Team</h2>
 									</header>
-									<div class="row"><p><span class="image left"><img src="images/pic03.jpg" alt="" /></span><b><u>Oliver Pour</b></u><br>
+									<div class="row"><p><span class="image left"><img src="images/pic03.jpg" alt="" /></span><b><u>Oliver Pour - President</b></u><br>
 									What’s up BU! My name is Oliver Pour, and I’m from Great Neck, New York.  I’m a sophomore majoring in Public Relations.
 									I want to be your President because student government isn’t just about involving judicial, or e-board, but it’s about involving 
 									the 17,000 students that make BU. Fun fact? I was born on a leap year so I would be the youngest student government President in the history of BU!</p>
-									</div><div class="row"><p><span class="image right"><img src="images/pic01.jpg" alt="" /></span><b><u>David Joseph</b></u><br>
+									</div><div class="row"><p><span class="image right"><img src="images/pic01.jpg" alt="" /></span><b><u>David Joseph - Vice President</b></u><br>
 									Yoo, BU! My name is David Joseph and I’m an Econ major in the class of 2022 from Winchester, MA (20 minutes outside of Boston). As someone who hasn’t been involved in student government before, I think I can bring a fresh, outside perspective, and I want anyone to become involved with our administration no matter what previous experience you’ve had. Fun fact? I can basically play any instrument, so if you see someone playing the piano, or any other instrument, in the GSU... it’s probably me</p>
-									</div><div class="row"><p><span class="image left"><img src="images/pic04.jpg" alt="" /></span><b><u>Nyah Jordan</b></u><br>
+									</div><div class="row"><p><span class="image left"><img src="images/pic04.jpg" alt="" /></span><b><u>Nyah Jordan - Vice President of Internal Affairs</b></u><br>
 									Hey BU! My name is Nyah Jordan, and I’m a sophomore majoring in journalism and minoring in poly sci from Hattiesburg, Mississippi. I’m running to be your Vice President of Internal Affairs because I want to foster more open engagement within student government, the university’s administration, and the student body. It’s important for every student to feel comfortable in approaching student government not only for their problems, but for events, for promotions, for new ideas, and sometimes, just for a conversation. Fun fact? My hair is naturally red!</p>
-									</div><div class="row"><p><span class="image right"><img src="images/pic02.jpg" alt="" /></span><b><u>Megan DeArmas</b></u><br>
+									</div><div class="row"><p><span class="image right"><img src="images/pic02.jpg" alt="" /></span><b><u>Megan DeArmas - Vice President of Finance</b></u><br>
 									Hi BU! My name is Megan DeArmas and I’m a sophomore majoring in Business Administration with a dual concentration in accounting and internal(?) systems from Miami, Florida. I’m running for Vice President of Finance because not a lot of people know how student government functions, and I want to be a part of that change that reaches to every corner of the BU community. I believe that having compFun fact? I can solve a Rubik’s cube in 47 seconds.</p>
 									</div>
 								</div>
