--- a/1ndex1.html
+++ b/1ndex1.html
@@ -22,30 +22,20 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>OneBU</strong> <span>@ Boston University</span></a>
 						<nav>
-							<a href="#Our Team">Our Team</a>
-							<a href="#Our Platform">Our Platform</a>
+							<a href="#Our Team">Team</a>
+							<a href="#Our Platform">Platform</a>
 							<a href="#Endorsements">Endorsements</a>
-							<a href="#menu"></a>
 						</nav>
 					</header>
-					
-				<!-- Menu -->
-					<nav id="menu">
-						<ul id ="links" class="links">
-							<li><a href="#Our Team">Our Team</a></li>
-							<li><a href="#Our Platform">Our Platform<a></li>
-							<li><a href="#Endorsements">Endorsements<a></li>
-						</ul>
-					</nav>
 
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1><img src="images/logo.png" alt="" height="140" /></h1>
+								<h1><img src="images/logo.png" alt="" height="90" /></h1>
 								<!--<h1>Hi, my name is Forty</h1>-->
 							</header>
-							<div class="content">
+							<div class="content" id=”content-desktop”>
 								</a><p>One Community. One Family. One BU.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Invoved</a></li>
@@ -240,6 +230,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+						<p><a href="https://www.busgov.org/">https://www.busgov.org/</a></p>
 							<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
