--- a/1ndex2.html
+++ b/1ndex2.html
@@ -163,7 +163,7 @@
 										</p>
 										<u>Out of Office, Office Hours</u>
 
-										<p>If elected, OneBU would be eager to begin a new initiative: Out of Office, Office Hours. This will be a time for Boston University students to get to know their professors in a different, more casual, and intimate setting. The professor who would be leading the conversation would be able to pick the topic (a nationwide issue, current events, etc.) and could facilitate the meeting however they would like. The mission we hope to accomplish through this initiative is to offer students and professors a new way to get to know each other in a unique way, outside the classroom while creating an open forum where our Boston University community can come together to debate and discuss controversial topics. 
+										<p>OneBU wants to maintain constant communication with all organizations who are willing to meet in order to make sure every voice is heard and their actions are carried out. We want to implement bi-weekly meetings with representatives from organizations and clubs called Out of Office, Office Hours, where representatives from clubs and organizations to promote transparency with our administration. Our goal is to continually update those clubs with our progress, giving them a space to communicate with Executive Board members directly. Furthermore, we will send out a weekly newsletter updating the student body on any events and news necessary.  
 										</p>
 
 
