Hide endorsements from top bar temporarily

--- a/1ndex2.html
+++ b/1ndex2.html
@@ -24,7 +24,7 @@
 						<nav>
 							<a href="#Our Team">Team</a>
 							<a href="#Our Platform">Platform</a>
-							<a href="#Endorsements">Endorsements</a>
+							<!--<a href="#Endorsements">Endorsements</a>-->
 						</nav>
 					</header>
 
