--- a/1ndex2.html
+++ b/1ndex2.html
@@ -38,7 +38,7 @@
 							<div class="content" id=”content-desktop”>
 								</a><p>One Community. One Family. One BU.</p>
 								<ul class="actions">
-									<li><a href="https://www.busgov.org/opportunities" class="button next scrolly">Get Invoved</a></li>
+									<li><a href="mailto:mailto:opour1@bu.edu" class="button next scrolly">Get Invoved</a></li>
 								</ul>
 							</div>
 						</div>
@@ -51,9 +51,11 @@
 							<section id="Our Team">
 								<div class="inner">
 									<header class="major">
-										<h2>Our Team</h2>
+										<h2>Why OneBU?</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>Student Government is not about the few dozen people in it but about the student body who make student government possible.
+									OneBU is a team comprised of students from diverse backgrounds and experiences who are also involved in various groups and organizations
+									across Boston University’s incredible campus. We are committed to expanding the voices of our amazing students through our platform by bringing transparent student government directly to them.</p>
 								</div>
 							</section>
 
@@ -69,9 +71,12 @@
 												<h3>Oliver Pour</h3>
 												<h4>President</h4>
 											</header>
-											<p>What’s up BU! My name is Oliver Pour, and I’m from Great Neck, New York.  I’m a sophomore majoring in Public Relations.
-											I want to be your President because student government isn’t just about involving judicial, or e-board, but it’s about involving 
-											the 17,000 students that make BU. Fun fact? I was born on a leap year so I would be the youngest student government President in the history of BU!
+											<p>WHAT’S UP BOSTON UNIVERSITY!! My name is Oliver Pour, and I’m from Great Neck, New York.
+											I’m a sophomore in the College of General Studies, majoring in Public Relations.
+											I would like to be YOUR President because student government isn’t only about those involved in Executive Board,
+											Judicial, or our Legislative Branch but it’s about involving the 16,000+ students that make Boston University and I
+											believe OneBU will be able to enhance our community here!
+											Fun fact? I was born on a leap year so I would be the youngest student government President in the history of Boston University at only 5 YEARS OLD!
 											</p>
 									<ul class="actions">
 												<li><a href="mailto:opour1@bu.edu" class="button">Email me</a></li>
@@ -89,11 +94,11 @@
 												<h3>David Joseph</h3>
 												<h4>Vice President</h4>
 											</header>
-											<p>Yoo, BU! My name is David Joseph and I’m an Econ major in the class of 2022 from Winchester, MA (20 minutes outside of Boston).
-											As someone who hasn’t been involved in student government before, I think I can bring a fresh, outside perspective, and I want anyone to become
-											involved with our administration no matter what previous experience you’ve had. Fun fact? I can basically play any instrument, so if you see someone
-											playing the piano, or any other instrument, in the GSU... it’s probably me</p>
-											</p>
+											<p>Yoo, BU! My name is David Joseph and I’m an Economics major in the Class of 2022 from Winchester, Massachusetts
+											(20 minutes outside of Boston). As someone who hasn’t been involved in student government before,
+											I think I can bring a fresh, outside perspective, and I want anyone and everyone to become involved with our administration no matter
+											what previous experience you’ve had. Something unique about me? I can basically play any instrument, so if you see someone playing the piano,
+											or any other instrument, in the GSU... it’s probably me. </p>
 									<ul class="actions">
 												<li><a href="mailto:dljoseph@bu.edu" class="button">Email me</a></li>
 											</ul>
@@ -110,10 +115,10 @@
 												<h3>Megan DeArmas</h3>
 												<h4>Vice President of Finance</h4>
 											</header>
-											<p>Hi BU! My name is Megan DeArmas and I’m a sophomore majoring in Business Administration with a dual concentration in accounting and internal(?)
-											systems from Miami, Florida. I’m running for Vice President of Finance because not a lot of people know how student government functions, and I want
-											to be a part of that change that reaches to every corner of the BU community. I believe that having compFun fact? I can solve a Rubik’s cube in 47
-											seconds.
+											<p>Hi BU! My name is Megan DeArmas and I’m a sophomore majoring in Business Administration with a dual concentration
+											in Accounting and Internal systems from Miami, Florida. I’m running for Vice President of Finance because not a great
+											amount of people know how our Boston University Student Government functions, and I want to be a part of that change
+											that’ll reach every corner of the Boston University community. Fun fact? I can solve a Rubik’s cube in 47 seconds.
 											</p>
 										<ul class="actions">
 												<li><a href="mailto:mdearmas@bu.edu" class="button">Email me</a></li>
@@ -131,10 +136,11 @@
 												<h3>Nyah Jordan</h3>
 												<h4>Vice President of Internal Affairs</h4>
 											</header>
-											<p>Hey BU! My name is Nyah Jordan, and I’m a sophomore majoring in journalism and minoring in poly sci from Hattiesburg, Mississippi. 
-											I’m running to be your Vice President of Internal Affairs because I want to foster more open engagement within student government, the university’s
-											administration, and the student body. It’s important for every student to feel comfortable in approaching student government not only for their problems,
-											but for events, for promotions, for new ideas, and sometimes, just for a conversation. Fun fact? My hair is naturally red!</p>
+											<p>Hey BU! My name is Nyah Jordan, and I’m a sophomore majoring in Journalism and minoring in Political
+											Science from Hattiesburg, Mississippi. I’m running to be your Vice President of Internal Affairs because I
+											want to foster more open engagement within student government, the university’s administration, and the student body.
+											It’s important for every student to feel comfortable in approaching student government not only for their problems, but for events,
+											for promotions,	for new ideas, and sometimes, just for a conversation. Fun fact? My hair is naturally red!</p>
 										</p>
 									<ul class="actions">
 												<li><a href="mailto:ngjordan@bu.edu" class="button">Email me</a></li>
@@ -160,13 +166,10 @@
 										</p>
 										<p>Throughout Underrepresented Students Week, we would like to highlight	underrepresented student groups at Boston University. OneBU is excited to announce that minority groups, first-generation students, transfer students and students that identify as part of the LGBTQIA+ community will be celebrated throughout this week on different days. We plan on promoting various on-campus resources during these days; bringing in FirstGen Connect during the day for first-generation students, ASDB, and mentorship programs offered throughout campus. In addition, we hope for everyone to show their support by wearing planned statement-shirts all throughout the week. To culminate the incredible week and the incredible people, OneBU will host an event on Friday that’ll celebrate ALL underrepresented students.  
 										</p>
-
-										<u>Giving Back Day</u> 
-
-										<p>Let’s dance! Here at Boston University, OneBU believes that each and every student should feel proud of the Boston community we are apart of. This 12-hour dance marathon will be committed to aiding local charities in the Boston Area by allowing participating organizations to choose from a curated list of charities and nonprofits.  OneBU would like to collaborate with ALL student organizations including, but not limited to, Greek Life organizations, our Athletics Department, and other groups in and around campus to ensure an extraordinary philanthropic event. Our mission is to provide a source of emotional and financial support while spreading awareness throughout our community. We believe that coming together for a great cause will ignite a feeling of togetherness and inclusiveness throughout our campus while also helping organizations boost their presence on Boston University’s campus
+										<u>ONEGala</u> 
+										<p>Here at Boston University, OneBU believes that each and every student should feel proud of the Boston community we are apart of. This end of the year event, ONEGala, will be to create community while showcasing Boston University’s greatest talent! This night will be where the Boston University community can celebrate students in different fields of art while also coming together for the greater good of philanthropy. It’ll be unique compared to other formal events as ALL proceeds will go to a nearby charity! OneBU would like to collaborate with ALL student organizations including, but not limited to; art groups, community engagement organizations, cultural clubs, and groups in and around campus to ensure an extraordinary philanthropic event. We believe that coming together for a great cause will ignite a feeling of togetherness and inclusiveness throughout our campus while also helping organizations boost their presence on Boston University’s campus.
 										</p>
 										<u>Out of Office, Office Hours</u>
-
 										<p>OneBU wants to maintain constant communication with all organizations who are willing to meet in order to make sure every voice is heard and their actions are carried out. We want to implement bi-weekly meetings with representatives from organizations and clubs called Out of Office, Office Hours, where representatives from clubs and organizations to promote transparency with our administration. Our goal is to continually update those clubs with our progress, giving them a space to communicate with Executive Board members directly. Furthermore, we will send out a weekly newsletter updating the student body on any events and news necessary.  
 										</p>
 
