--- a/1ndex2.html
+++ b/1ndex2.html
@@ -38,7 +38,7 @@
 							<div class="content" id=”content-desktop”>
 								</a><p>One Community. One Family. One BU.</p>
 								<ul class="actions">
-									<li><a href="mailto:mailto:opour1@bu.edu" class="button next scrolly">Get Invoved</a></li>
+									<li><a href="mailto:mailto:opour1@bu.edu" class="button next scrolly">Contact us</a></li>
 								</ul>
 							</div>
 						</div>
@@ -239,11 +239,8 @@
 						<div class="inner">
 						<p><a href="https://www.busgov.org/">https://www.busgov.org/</a></p>
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.facebook.com/onebu2020/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/onebu2020/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 						</div>
 					</footer>
