--- a/1ndex2.html
+++ b/1ndex2.html
@@ -38,7 +38,7 @@
 							<div class="content" id=”content-desktop”>
 								</a><p>One Community. One Family. One BU.</p>
 								<ul class="actions">
-									<li><a href="mailto:mailto:opour1@bu.edu" class="button next scrolly">Contact us</a></li>
+									<li><a href="mailto:opour1@bu.edu" class="button next scrolly">Contact us</a></li>
 								</ul>
 							</div>
 						</div>
