--- a/1ndex2.html
+++ b/1ndex2.html
@@ -38,7 +38,7 @@
 							<div class="content" id=”content-desktop”>
 								</a><p>One Community. One Family. One BU.</p>
 								<ul class="actions">
-									<li><a href="mailto:opour1@bu.edu" class="button next scrolly">Contact us</a></li>
+									<li><a href="opour1@bu.edu" class="button next scrolly">Contact us</a></li>
 								</ul>
 							</div>
 						</div>
@@ -79,7 +79,7 @@
 											Fun fact? I was born on a leap year so I would be the youngest student government President in the history of Boston University at only 5 YEARS OLD!
 											</p>
 									<ul class="actions">
-												<li><a href="mailto:opour1@bu.edu" class="button">Email me</a></li>
+												<li><a href="opour1@bu.edu" class="button">Email me</a></li>
 											</ul>
 										</div>
 									</div>
@@ -100,7 +100,7 @@
 											what previous experience you’ve had. Something unique about me? I can basically play any instrument, so if you see someone playing the piano,
 											or any other instrument, in the GSU... it’s probably me. </p>
 									<ul class="actions">
-												<li><a href="mailto:dljoseph@bu.edu" class="button">Email me</a></li>
+												<li><a href="dljoseph@bu.edu" class="button">Email me</a></li>
 											</ul>
 										</div>
 									</div>
@@ -121,7 +121,7 @@
 											that’ll reach every corner of the Boston University community. Fun fact? I can solve a Rubik’s cube in 47 seconds.
 											</p>
 										<ul class="actions">
-												<li><a href="mailto:mdearmas@bu.edu" class="button">Email me</a></li>
+												<li><a href="mdearmas@bu.edu" class="button">Email me</a></li>
 											</ul>
 										</div>
 									</div>
@@ -143,7 +143,7 @@
 											for promotions,	for new ideas, and sometimes, just for a conversation. Fun fact? My hair is naturally red!</p>
 										</p>
 									<ul class="actions">
-												<li><a href="mailto:ngjordan@bu.edu" class="button">Email me</a></li>
+												<li><a href="ngjordan@bu.edu" class="button">Email me</a></li>
 											</ul>
 										</div>
 									</div>
