analytics and google search

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
+		<meta name="description" content="Official website of OneBU">
+		<meta name="keywords" content="boston university,bu,boston u,Boston university student government, student gov bu, gov bu,
+					       government bu, onebu student government, onebu student gov, onebu bu student gov">
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-64037687-2"></script>
+		<script>
+ 			 window.dataLayer = window.dataLayer || [];
+ 			 function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+
+ 			 gtag('config', 'UA-64037687-2');
+		</script>
+		
+		
+		
 	</head>
 	<body class="is-preload">
 
