--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			  gtag('js', new Date());
 
  			 gtag('config', 'UA-64037687-2');
+			gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
 		</script>
 		
 		
