--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
  			gtag('config', 'UA-64037687-2');
 			gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
+			ga('set', 'userId', 'USER_ID'); // Set the user ID using signed-in user_id.
 		</script>
 		
 		
