--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Megan DeArmas</h3>
+												<h3>Megan de Armas</h3>
 												<h4>Vice President of Finance</h4>
 											</header>
-											<p>Hi BU! My name is Megan DeArmas and I’m a sophomore majoring in Business Administration with a dual concentration
+											<p>Hi BU! My name is Megan de Armas and I’m a sophomore majoring in Business Administration with a dual concentration
 											in Accounting and Internal systems from Miami, Florida. I’m running for Vice President of Finance because not a great
 											amount of people know how our Boston University Student Government functions, and I want to be a part of that change
 											that’ll reach every corner of the Boston University community. Fun fact? I can solve a Rubik’s cube in 47 seconds.
